log

Fri Mar 11 19:55:12 HSP 2022: 
test.c: In function 'suma':
test.c:244:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:244:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
910a96c
Fri Mar 11 19:55:35 HSP 2022: 
test.c: In function 'suma':
test.c:244:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:244:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0725a02
Fri Mar 11 19:56:01 HSP 2022: 
test.c: In function 'suma':
test.c:244:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:244:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
24cc562
Fri Mar 11 19:58:41 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
070cc92
Fri Mar 11 20:11:21 HSP 2022: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
93ae96c
Fri Mar 11 20:15:51 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
870b48b
Fri Mar 11 20:16:18 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
caa1e3c
Fri Mar 11 20:17:11 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
76df343
Fri Mar 11 20:17:45 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9e31292
Fri Mar 11 20:24:47 HSP 2022: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:39:9: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    suma = sumaN(a,n);
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
fa4a227
Fri Mar 11 20:25:07 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
259eb96
Fri Mar 11 20:25:39 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9159f0a
Fri Mar 11 20:27:28 HSP 2022: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
213e101
Fri Mar 11 20:28:18 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fe6075d
Fri Mar 11 20:45:08 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:63:11: error: incompatible types when returning type 'Persona {aka struct <anonymous>}' but 'Persona * {aka struct <anonymous> *}' was expected
    return *vector;
           ^~~~~~~
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
42e49ae
Fri Mar 11 20:45:18 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
0499e76
Fri Mar 11 20:45:54 HSP 2022: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
7d56e59
Fri Mar 11 20:50:28 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
c0614ac
Fri Mar 11 21:52:09 HSP 2022: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
a6bcbd3
Fri Mar 11 21:52:45 HSP 2022: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
f3b4861
Fri Mar 11 21:56:29 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
0427af8
Fri Mar 11 21:57:04 HSP 2022: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 30/70
8f7e378
